<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".QrActivity">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans"
            android:text="@string/google_io_2019"
            android:textColor="@color/blue"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans"
            android:text="@string/date"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp" android:id="@+id/appCompatTextView"/>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            app:layout_constraintBottom_toTopOf="@+id/remove"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/qrcode"
                    android:layout_gravity="center"
                    android:layout_height="0dp"
                    android:layout_width="0dp"
                    app:layout_constraintDimensionRatio="1:1"
                    android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="30dp" android:layout_marginBottom="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="30dp"/>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="center_horizontal" app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="parent"
                          android:layout_marginTop="15dp">
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ticket_confirmation"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/google_sans"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/your_ticket"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="center_horizontal|bottom" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp" android:layout_height="25dp"
                        android:src="@drawable/map"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/google_sans"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/location"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal|bottom" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:src="@drawable/delete"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/red"
                android:fontFamily="@font/google_sans"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/remove_ticket"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>